feat(thesis): daily update

--- a/content/further_development.tex
+++ b/content/further_development.tex
@@ -9,12 +9,10 @@
 A megvalósított rendszer üzemeltetése a tervezett módon történt. A rendszer
 tökéletesen megfelelt a kitett elvárásoknak, és üzemeltetése során nem
 tapasztaltunk semmilyen rendellenességet. A teljesítménye és megbízhatósága is megfelelőnek bizonyult, nem 
-voltak csomagvesztéstek a hálózaton, egyetlen egyszer sem kellett a másodlagos redundáns hálózatra
+voltak csomagvesztések a hálózaton, egyetlen egyszer sem kellett a másodlagos redundáns hálózatra
 váltani, nem fordultak elő kiugró késések, minden eszköz bőven a beállított buffer méretben belül maradt.
 Minden komponens megfelelően végezte a rá bízott feladatot, és a rendszer
 stabilan kihagyás nélkül működött a teljes üzemidő alatt. 
-
-
 
 %----------------------------------------------------------------------------
 \section{Továbbfejlesztési lehetőségek}
@@ -39,6 +37,10 @@ felbontásra való kibővítése. Ez azt jelenti, hogy az összes Line Array egy
 végfok csatornával hajtjuk meg.
 További fejlesztés a rendszerben a LineArray hangfalak számának növelése megfelelő számú végfok egységgel,
 amely tovább növeli a rendszer teljesítményét és a maximálisan lefedhető területet.
+
+%----------------------------------------------------------------------------
+\subsubsection{Shure Axient Digital rendszer}
+%----------------------------------------------------------------------------
 
 %----------------------------------------------------------------------------
 \begin
