feat(thesis): daily update

--- a/content/introduction.tex
+++ b/content/introduction.tex
@@ -10,35 +10,37 @@ Kisgyermek koromtól kezdve érdekelnek a hangtechnikához fűződő eszközök 
 szüleim egy új fajta rádiólejátszót vásároltak otthonra, amelyen már nem csak a rádióadásokat lehetett hallgatni, hanem lejátszhatóak voltak kazetták is.
 A készüléket akkoriban jobban tudtam kezelni gyermekként, mint a szüleim, egyértelmű volt már akkoriban is, a technika és a zene iránti érdeklődésem. 
 
-Ezek után általános iskolában a fizika tanárommal együtt kezdtük el a sulirádió működtetését, amelynek a telepítési részében is részt vettem, mivel azelőtt
-csak egyszerű csengők voltak felszerelve az épületben. Szükség volt hangsugárzókra, erősítőkre, mikrofonokra, és egyéb kiegészítőkre. A rádió működtetése
-is az én feladatom lett két másik barátommal együtt, az iskolával kapcsolatos híreket és információkat mondtuk be röviden a szünetekben, esetlegesen hosszabb szünetekben pedig zenéket játszottunk.
+Ezek után általános iskolában a fizika tanárommal együtt kezdtük el a sulirádió működtetését, amelynek a telepítési részében is részt vettem.
+Korábban az egyszerű klasszikus csengők voltak felszerelve az épületben. Szükség volt hangsugárzókra, erősítőkre, mikrofonokra, és egyéb kiegészítőkre. A rádió működtetése
+is az én feladatom lett két barátommal együtt, az iskolával kapcsolatos híreket és információkat mondtuk be röviden a szünetekben, hosszabb szünetekben pedig zenéket is játszottunk.
 
 Mindeközben zeneiskolába is beiratkoztam, ahol ütőhangszeresként tanultam egészen egyetemi tanulmányaim kezdetéig. A több mint tíz év alatt, sok új ismeretet és tapasztalatot szereztem,
 amit a későbbiekben mint zenész és hangtechnikával aktívan foglalkozó szakember tudtam hasznosítani. Megismerkedtem a különböző zenei stílusok egyedi hangzásvilágával, ami a későbbiekben a hangosításban is nagy segítségemre volt.
 
-Középiskolai tanulmányaim alatt kezdtem el komolyabban foglalkozni a hangtechnika világával komolyabb szinten. 
-A fizika tanárommal ugyanis korábban nem csak a sulirádiót működtettük, hanem az összes sulibulit és helyi rendezvényt mi szolgáltuk ki technikailag.
-Mikor már középiskolába jártam, volt tanárom egy feltörekvő fiatalos és modern gondolkodású magánvállalkozáshoz ajánlott be engem, ahol fiatal és motivált munkaerőt kerestek.
+Középiskolai tanulmányaim alatt kezdtem el komolyabban foglalkozni a hangtechnika világával.
+Előbbiekben említett tanárommal ugyanis korábban nem csak a sulirádiót működtettük, hanem az összes sulibulit és helyi rendezvényt mi szolgáltuk ki technikailag.
+Mikor már középiskolába jártam, egy feltörekvő fiatalos és modern gondolkodású magánvállalkozáshoz ajánlottak be engem, ahol fiatal és motivált munkaerőt kerestek.
 
 Már az első munkalehetőségnél éreztem, hogy ez egy nagyon jó lehetőség lehet a számomra, mindenképpen szeretnék ebben a szakmában tevékenykedni.
 A cég fő profilja a hangrendszerek rendezvényekre való kiépítése és üzemeltetése volt, de későbbiekben bővült a portfólió és már fénytechnikával és színpadtechnikával is el kezdett foglalkozni. 
-Ettől a ponttól kezdve kezdtem el aktívan dolgozni a rendezvényiparban és a hangrendszerek világában. Az évek során egyre több tapasztalatot
-szereztem. Évente több mint száz rendezvényen tudtam folyamatosan fejlődni, rutint és ismeretséget szerezni a szakmában.
+Ettől a ponttól kezdve kezdtem el aktívan dolgozni a rendezvényiparban és a hangrendszerek világában. Az évek során egyre több tapasztalatot szereztem.
+Évente több mint száz rendezvényen tudtam folyamatosan fejlődni, rutint és ismeretséget szerezni a szakmában.
 
-\subsection{Téma választás}
+\section{Téma választás}
 
-A hangrendszerek világa az elmúlt évtizedekben nagy változásokon ment keresztül. A digitális technika térhódítása a hangtechnikában is megjelent, és egyre több fajta új megközelítés jelent meg a piacon.
-A digitális fejlesztésekből mi sem szerettünk volna kimaradni, hogy hangtechnikai apparátusunk korszerű és versenyképes maradjon.
+A hangrendszerek világa az elmúlt évtizedekben nagy változásokon ment keresztül.
+A digitális technika térhódítása a hangtechnikában is megjelent, és egyre több fajta új megközelítés jelent meg a piacon.
+Ezekből a fejlesztésekből mi sem szerettünk volna kimaradni, hogy hangtechnikai apparátusunk korszerű és versenyképes maradjon.
 
-Ekkor jött a fejlesztési ötlet, egy olyan rendszert tervezni, amely teljes mértékben digitális alapokra helyezi a jelenlegi hibrid megoldásunkat. A cégvezetőtől azt a feladatot kaptam mint leendő informatikus mérnök,
-hogy tervezzek egy olyan rendszert, amely megoldja a jelenlegi hibrid rendszerünk teljes digitális megoldásra való cseréjét. 
-Az alapvető szempontok közé tartozott, hogy a rendszer legyen könnyen skálázható, bővíthető, valamint a jelenlegi rendszert minden tekintetben felülmúlja.
+Ekkor jött a fejlesztési ötlet, egy olyan rendszert tervezni, amely teljes mértékben digitális alapokra helyezi a jelenlegi hibrid megoldásunkat.
+A cégvezetőtől azt a feladatot kaptam mint leendő informatikus mérnök, hogy tervezzek egy olyan rendszert,
+amely megoldja a jelenlegi hibrid rendszerünk teljes digitális megoldásra való átállását.
+Az alapvető szempontok közé tartozott, hogy a rendszer legyen könnyen skálázható, bővíthető, valamint a jelenlegi rendszert minden tekintetben múlja felül.
 
-Különböző Audio over IP protokollok léteznek, ezért választanom kellett, amely a leginkább megfelel az aktuális igényeinek.
-Ehhez a piacon lévő protokollokat kellett megvizsgálnom, és egy optimális megoldást választani. 
+Különböző Audio over IP protokollok léteznek, ezért választanom kellett, amely a leginkább megfelel az aktuális igényeinek és anyagi helyzetünknek.
+Ehhez a piacon lévő protokollokat kellett megvizsgálnom, és egy optimális megoldást választani.
 
 Szakdolgozatomban sok idegen nyelvű szóra nincsen megfelelő és pontos fordítás ami teljes mértékben tükrözné az adott kifejezés jelentését.
 A továbbiakban ebből kifolyólag feltételezve azt, hogy az olvasó tisztában van a szakmai terminológiával angolul fogom említeni a szakmai kifejezéseket.
 Ezek a kifejezések megjelenhetnek írt szövegként és ábrás illusztrációkban is. Egyes ábrák rendkívüli komplexitásuk végett a szakmai helyesség és precízió érdekében
-külső forrásból származnak, ezeket az ábrákat a forrásukkal együtt fogom megjeleníteni a szakdolgozatban.
+külső forrásból származnak, ezeket az ábrákat a forrásukkal együtt fogom megjeleníteni.
