feat(thesis): daily update

--- a/content/system_desing.tex
+++ b/content/system_desing.tex
@@ -486,7 +486,7 @@ A példában szereplő rendszer kifogástalanul képes elvégezni a feladatát, 
 
 
 
-% !!! Képernyőfotó a szerverről !!!
+% !!! Képernyőfotó a szerverről !!! Leírás a pluginokról, singnal chain, hogy működik stb, plusz késés, mérések ilyesmi
 
 
 
@@ -647,6 +647,13 @@ fázishelyes és időben is helyes már, készen áll a produkcióra.
 %----------------------------------------------------------------------------
 % FrontFill - TOP Align
 %----------------------------------------------------------------------------
+
+
+
+
+
+
+
 
 
 
